kubernetes/manifests/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: devsecops
spec:
  selector:
    app: user-service
  ports:
  - port: 5555
    targetPort: 5555
  type: ClusterIP
